--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div class="navbar-nav me-auto py-0">
                 <a href="#project" class="nav-item nav-link">Projects</a>
                 <a href="#team" class="nav-item nav-link">Team</a>
-                <a href="#testimonial" class="nav-item nav-link">Testimonial</a>
+                <a href="#testimonial" class="nav-item nav-link">Coworker</a>
                 <a href="#contact" class="nav-item nav-link">Contact</a>
             </div>
         </div>
@@ -533,7 +533,7 @@
     <!-- Testimonial Start -->
     <div class="container-fluid bg-light py-5 my-5" id="testimonial">
         <div class="container-fluid py-5">
-            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Testimonial</h1>
+            <h1 class="display-5 text-center mb-5 wow fadeInUp" data-wow-delay="0.1s">Coworker</h1>
             <div class="row justify-content-center">
                 <div class="col-lg-3 d-none d-lg-block">
                     <div class="testimonial-left h-100">
@@ -553,7 +553,7 @@
                             </div>
                             <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
+                            <h5>Mahsa Heydari</h5>
                             <span>Profession</span>
                         </div>
                         <div class="testimonial-item text-center">
@@ -565,7 +565,7 @@
                             </div>
                             <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
+                            <h5>Saba Heydari</h5>
                             <span>Profession</span>
                         </div>
                         <div class="testimonial-item text-center">
@@ -577,7 +577,7 @@
                             </div>
                             <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
                             <hr class="w-25 mx-auto">
-                            <h5>Client Name</h5>
+                            <h5>Somaye Ranjbar</h5>
                             <span>Profession</span>
                         </div>
                     </div>
