--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                         </div>
                         <h3 class="lh-base mb-0">of working experience as a IT Man & web developer & Linux Sys</h3>
                     </div>
-                    <p class="mb-4">I was born on June 22, 1995 in Kermanshah and I live here independently in an old neighborhood. I am a freelancer, sometimes I play the setar, sometimes I write poetry and I am interested in listening to podcasts and reading about technology. </p>
+                    <p class="mb-4">I am Fullstack developer from Kermanshah and I live here independently in an old neighborhood. I am a freelancer, sometimes I play the setar, sometimes I write poetry and I am interested in listening to podcasts and reading about technology. </p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>Afordable Prices</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>High Quality Product</p>
                     <p class="mb-3"><i class="far fa-check-circle text-primary me-3"></i>On Time Project Delivery</p>
