--- a/index.html
+++ b/index.html
@@ -551,10 +551,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Content Manager</p>
                             <hr class="w-25 mx-auto">
                             <h5>Mahsa Heydari</h5>
-                            <span>Profession</span>
+                            <span>UPIA TEAM</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -563,10 +563,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Graphic Designe</p>
                             <hr class="w-25 mx-auto">
                             <h5>Saba Heydari</h5>
-                            <span>Profession</span>
+                            <span>UPIA TEAM</span>
                         </div>
                         <div class="testimonial-item text-center">
                             <div class="position-relative mb-5">
@@ -575,10 +575,10 @@
                                     <i class="fa fa-quote-left text-primary"></i>
                                 </div>
                             </div>
-                            <p class="fs-5 fst-italic">Dolores sed duo clita tempor justo dolor et stet lorem kasd labore dolore lorem ipsum. At lorem lorem magna ut et, nonumy et labore et tempor diam tempor erat.</p>
+                            <p class="fs-5 fst-italic">Wordpress</p>
                             <hr class="w-25 mx-auto">
                             <h5>Somaye Ranjbar</h5>
-                            <span>Profession</span>
+                            <span>UPIA TEAM</span>
                         </div>
                     </div>
                 </div>
