--- a/index.html
+++ b/index.html
@@ -490,11 +490,11 @@
             <div class="row g-4">
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/saba.png" alt="">
+                        <img class="img-fluid rounded" src="img/maryam_farshadfar.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Saba Heydari</h5>
-                                <span>Graphic Designer</span>
+                                <h5>Maryam Farshadfar</h5>
+                                <span>UI/UX</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
@@ -502,11 +502,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.3s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/mahsa.png" alt="">
+                        <img class="img-fluid rounded" src="img/sadegh_hossini.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Mahsa Heydari</h5>
-                                <span>Content Management</span>
+                                <h5>Sadegh Hossini</h5>
+                                <span>Sales Manager</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
@@ -514,11 +514,11 @@
                 </div>
                 <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
                     <div class="team-item position-relative">
-                        <img class="img-fluid rounded" src="img/somaye.png" alt="">
+                        <img class="img-fluid rounded" src="img/sara_almasi.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
-                                <h5>Somaye Ranjbar</h5>
-                                <span>Wordpress</span>
+                                <h5>Sara Almasi</h5>
+                                <span>Electronic</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
