--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                     </div>
                 </div>
                 <div class="col-lg-6">
-                    <img class="img-fluid" src="img/Afash_user_image.jpg" alt="">
+                    <img class="img-fluid" src="img/Afash_user_image.jpg" alt="Afash">
                 </div>
             </div>
         </div>
