--- a/index.html
+++ b/index.html
@@ -488,13 +488,25 @@
                 </div>
             </div>
             <div class="row g-4">
-                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <!-- <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
                     <div class="team-item position-relative">
                         <img class="img-fluid rounded" src="img/maryam_farshadfar.jpg" alt="">
                         <div class="team-text bg-white rounded-end p-4">
                             <div>
                                 <h5>Maryam Farshadfar</h5>
                                 <span>UI/UX</span>
+                            </div>
+                            <i class="fa fa-arrow-right fa-2x text-primary"></i>
+                        </div>
+                    </div>
+                </div> -->
+                <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                    <div class="team-item position-relative">
+                        <img class="img-fluid rounded" src="img/majid_roodi.png" alt="">
+                        <div class="team-text bg-white rounded-end p-4">
+                            <div>
+                                <h5>Majid Roudi</h5>
+                                <span>Network Expert</span>
                             </div>
                             <i class="fa fa-arrow-right fa-2x text-primary"></i>
                         </div>
