--- a/cv/cv.html
+++ b/cv/cv.html
@@ -63,7 +63,7 @@
             <div class="languages-container container-block">
                 <h2 class="container-block-title">Languages</h2>
                 <ul class="list-unstyled interests-list">
-                    <li>English <span class="lang-desc">(Diploma)</span></li>
+                    <li>English <span class="lang-desc">(intermediate)</span></li>
                     <li>Persian <span class="lang-desc">(Native)</span></li>
                     <li>Kurdish <span class="lang-desc">(Native)</span></li>
                 </ul>
@@ -74,7 +74,7 @@
                 <ul class="list-unstyled interests-list">
                     <li>Music</li>
                     <li>Podcast</li>
-                    <li>Cooking</li>
+                    <li>Dogs</li>
                 </ul>
             </div><!--//interests-->
             <div class="interests-container container-block">
