--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="author" content="afash7">
+    <meta name="author" content="Afash Gholami">
     <meta charset="utf-8">
     <title>Afashツ | آفش</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
